--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-  numpy==1.17.2
-  jupyter=1.0.0
-  tensorflow==2.0.0
-  pyyaml==5.1.2
-  nipy==0.4.2
-  GPUtil==1.4.0
-  scikit-learn==0.21.3
-  matplotlib==3.1.1
-  tensorflow_probability==0.8.0
-  pandas==0.25.1
+numpy==1.17.2
+jupyter==1.0.0
+tensorflow==2.0.0
+pyyaml==5.1.2
+nipy==0.4.2
+GPUtil==1.4.0
+scikit-learn==0.21.3
+matplotlib==3.1.1
+tensorflow_probability==0.8.0
+pandas==0.25.1
