--- a/configs/training/Entrack.yml
+++ b/configs/training/Entrack.yml
@@ -1,34 +1,37 @@
 model_name: Entrack
 model_type: conditional
 
-temperature: 0.01
+temperature: 0.04
 
 optimizer: Adam
-optimizer_params: 
+opt_params: 
   learning_rate: 0.0001
   clipnorm: 10.0
 
-epochs: 100
-batch_size: 32
+epochs: 10
+batch_size: 256
 shuffle: True
 
-train_path: subjects/992774/samples/2019-10-28-15:29:05/samples.npz
+train_path: subjects/992774/samples/2019-10-29-12:02:11/samples.npz
+# 0.1% subjects/992774/samples/2019-10-28-15:29:05/samples.npz
+#  20% subjects/992774/samples/2019-10-29-12:02:11/samples.npz
 eval_path: subjects/917255/samples/2019-10-28-15:28:50/samples.npz
+# 0.1% subjects/917255/samples/2019-10-28-15:28:50/samples.npz
 
 callbacks:
   RunningWindowLogger:
     metrics: ["kappa_mean", "fvm_mean_neg_dot_prod"]
-    window_size: 128
+    window_size: 32
   AutomaticTemperatureSchedule:
     temperature: None
     T_stop: 0.005
     decay: 0.99
-    tol: 0.01
+    tol: 0.04
     min_lr: 0.0001
     n_checkpoints: 10
     out_dir: None
   EntrackSummaries:
-    update_freq: 200
+    update_freq: 256
     activations_freq: "epoch"
     scatter_freq: "epoch"
     out_dir: None
