--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 .idea/
-.ipynb_checkpoints/
+**/.ipynb_checkpoints/
 subjects/
 hcp_zips/
 models/
@@ -8,4 +8,4 @@ models/
 !models/__init__.py
 scoring/scoring_data
 scoring/results
-*.pyc
+**/*.pyc
