inference with config file first draft

--- a/configs/training/Entrack.yml
+++ b/configs/training/Entrack.yml
@@ -13,6 +13,7 @@ batch_size: 256
 shuffle: True
 
 train_path: subjects/644044/small_samples/2019-11-05-12:33:28/samples.npz
+eval_path: subjects/644044/small_samples/2019-11-05-12:33:28/samples.npz
 
 callbacks:
   RunningWindowLogger:
