random forest inference

--- a/configs/training/RF.yml
+++ b/configs/training/RF.yml
@@ -3,7 +3,7 @@ model_name: random_forest
 train_path: subjects/644044/small_samples/2019-11-05-12:33:28/samples.npz
 bvecs: subjects/644044/bvecs_input
 
-n_estimators: 1000
-max_depth: 50
+n_estimators: 30
+max_depth: 10
 
-out_dir: ../models
+out_dir: models/
