--- a/configs/training/Entrack.yml
+++ b/configs/training/Entrack.yml
@@ -3,31 +3,31 @@ model_type: conditional
 
 action: training
 
-temperature: 0.04
+temperature: 0.1
 
 optimizer: Adam
 opt_params: 
-  learning_rate: 0.0001
+  learning_rate: 0.0002
   clipnorm: 10.0
 
-epochs: 10
+epochs: 100000
 batch_size: 256
 shuffle: True
 
 callbacks:
   RunningWindowLogger:
     metrics: ["kappa_mean", "fvm_mean_neg_dot_prod"]
-    window_size: 32
+    window_size: 64
   AutomaticTemperatureSchedule:
     temperature: None
-    T_stop: 0.005
+    T_stop: 0.001
     decay: 0.99
-    tol: 0.04
-    min_lr: 0.0001
-    n_checkpoints: 10
+    tol: 0.01
+    min_lr: 0.0002
+    n_checkpoints: 20
     out_dir: None
   EntrackSummaries:
-    update_freq: 256
+    update_freq: 512
     activations_freq: "epoch"
     scatter_freq: "epoch"
     out_dir: None
@@ -38,9 +38,9 @@ out_dir: None
 # W0001
 train_path:
   - subjects/601127/samples/2019-11-11-19:36:12/samples.npz
-  #- subjects/702133/samples/2019-11-11-19:35:43/samples.npz
-  #- subjects/802844/samples/2019-11-11-19:35:15/samples.npz
-  #- subjects/992774/samples/2019-11-11-10:39:06/samples.npz
+  - subjects/702133/samples/2019-11-11-19:35:43/samples.npz
+  - subjects/802844/samples/2019-11-11-19:35:15/samples.npz
+  - subjects/992774/samples/2019-11-11-10:39:06/samples.npz
 eval_path: subjects/917255/samples/2019-11-11-10:42:51/samples.npz
 
 
