--- a/configs/training/RNNLSTMEntrack.yml
+++ b/configs/training/RNNLSTMEntrack.yml
@@ -1,4 +1,4 @@
-model_name: RNNEntrack
+model_name: RNNLSTMEntrack
 model_type: conditional
 
 action: training
@@ -26,12 +26,6 @@ callbacks:
     min_lr: 0.0001
     n_checkpoints: 10
     out_dir: None
-  EntrackSummaries:
-    update_freq: 256
-    activations_freq: "epoch"
-    scatter_freq: "epoch"
-    out_dir: None
-    eval_seq: None
   RNNResetCallBack:
     reset_batches:
 
