--- a/configs/training/Entrack.yml
+++ b/configs/training/Entrack.yml
@@ -26,14 +26,17 @@ callbacks:
     min_lr: 0.0002
     n_checkpoints: 20
     out_dir: None
-  EntrackSummaries:
-    update_freq: 50000
-    activations_freq: "epoch"
-    scatter_freq: "epoch"
-    out_dir: None
-    eval_seq: None
+  #EntrackSummaries:
+  #  update_freq: 50000
+  #  activations_freq: "epoch"
+  #  scatter_freq: "epoch"
+  #  out_dir: None
+  #  eval_seq: None
 
 out_dir: None
+
+train_path: /local/tract/conditional_samples/992774/2019-11-20-14:42:16/  # 0.2 keep
+eval_path: /local/home/vwegmayr/ijcv19/subjects/917255/samples/2019-11-11-10:42:51/samples.npz  # 0.001 keep
 
 # W0001
 #train_path:
@@ -88,12 +91,3 @@ out_dir: None
 #eval_path: subjects/917255/samples/2019-11-11-10:42:51/samples.npz
 
 
-# W0050
-train_path:
-  - subjects/599671/samples/2019-11-14-15:45:23/samples.npz
-  - subjects/601127/samples/2019-11-11-14:29:24/samples.npz
-  - subjects/702133/samples/2019-11-11-14:32:55/samples.npz
-  - subjects/802844/samples/2019-11-11-14:43:39/samples.npz
-  - subjects/859671/samples/2019-11-14-15:55:13/samples.npz
-  - subjects/992774/samples/2019-11-11-14:27:38/samples.npz
-eval_path: subjects/917255/samples/2019-11-11-10:42:51/samples.npz
