--- a/configs/training/LSTM.yml
+++ b/configs/training/LSTM.yml
@@ -11,8 +11,8 @@ epochs: 10
 batch_size: 128
 shuffle: False
 
-train_path: /local/tract/rnn_samples/992774/2019-11-12-11:18:30/samples.npz
-eval_path: /local/tract/rnn_samples/644044/2019-11-12-10:41:22//samples.npz
+train_path: /local/tract/rnn_samples/992774/2019-11-19-06:15:58/  # 0.2 keep
+eval_path: /local/tract/rnn_samples/992774/2019-11-19-14:17:59/ # 0.05 keep
 
 callbacks:
   RNNResetCallBack:
