--- a/configs/inference/Detrack.yml
+++ b/configs/inference/Detrack.yml
@@ -1,6 +1,6 @@
 model_name: Detrack
 
-model_path: models/Detrack/conditional/2019-11-20/16:59:12/final_model.h5  # LSTM
+model_path: models/Detrack/conditional/2019-11-20/16:59:12/final_model.h5 
 dwi_path: subjects/ismrm_basic/fod_norm_125.nii.gz
 prior_path: subjects/ismrm_basic/tensor_V1_125.nii.gz
 seed_path: scoring/scoring_data/seeds/seeds_from_wm_100.trk
