--- a/configs/inference/LSTM.yml
+++ b/configs/inference/LSTM.yml
@@ -1,6 +1,6 @@
 model_name: RNNLSTM
 
-model_path: models/RNNLSTM/2019-11-19/15:32:43/final_model.h5  # LSTM
+model_path: models/RNNLSTM/2019-11-19/15:32:43/inter_model_07-0.00.h5  # LSTM
 dwi_path: subjects/ismrm_basic/fod_norm_125.nii.gz
 prior_path: subjects/ismrm_basic/tensor_V1_125.nii.gz
 seed_path: scoring/scoring_data/seeds/seeds_from_wm_100.trk
