--- a/configs/training/Entrack.yml
+++ b/configs/training/Entrack.yml
@@ -19,24 +19,44 @@ callbacks:
     metrics: ["kappa_mean", "fvm_mean_neg_dot_prod"]
     window_size: 32
   AutomaticTemperatureSchedule:
-    temperature: None
+    temperature:
     T_stop: 0.001
     decay: 0.99
     tol: 0.01
     min_lr: 0.0002
-    n_checkpoints: 20
-    out_dir: None
-  #EntrackSummaries:
-  #  update_freq: 50000
-  #  activations_freq: "epoch"
-  #  scatter_freq: "epoch"
-  #  out_dir: None
-  #  eval_seq: None
+    n_checkpoints: 30
+    out_dir:
+  EntrackSummaries:
+    update_freq: 100000
+    activations_freq: "epoch"
+    scatter_freq: # DON'T, does not work
+    out_dir:
+    eval_seq:
 
-out_dir: None
+out_dir:
 
-train_path: /local/tract/conditional_samples/992774/2019-11-20-14:42:16/  # 0.2 keep
-eval_path: /local/home/vwegmayr/ijcv19/subjects/917255/samples/2019-11-11-10:42:51/samples.npz  # 0.001 keep
+# DeepTract MITK fibers
+train_path: subjects/ismrm_basic/samples/2019-12-08-01:51:35/
+eval_path: subjects/917255/samples/2019-11-11-10:42:51/samples.npz
+
+# W0500
+#train_path:
+#  #- subjects/601127/samples/2019-11-11-14:29:24/samples.npz
+#  - subjects/702133/samples/2019-11-11-14:32:55/samples.npz
+#  - subjects/802844/samples/2019-11-11-14:43:39/samples.npz
+#  - subjects/859671/samples/2019-11-14-15:55:13/samples.npz
+#  - subjects/992774/samples/2019-11-11-14:27:38/samples.npz
+#eval_path: subjects/917255/samples/2019-11-11-10:42:51/samples.npz
+
+# mitk11
+# train_path: subjects/ismrm_basic/samples/2019-11-27-21:09:50/
+# eval_path: subjects/917255/samples/2019-11-11-10:42:51/samples.npz # 0.001 keep
+
+# ifod2 on ismrm_basic
+# train_path: subjects/ismrm_basic/samples/2019-11-26-23:17:26/
+
+# train_path: /local/tract/conditional_samples/992774/2019-11-20-14:42:16/  # 0.2 keep
+# eval_path: /local/home/vwegmayr/ijcv19/subjects/917255/samples/2019-11-11-10:42:51/samples.npz  # 0.001 keep
 
 # W0001
 #train_path:
